# piper1-gpl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: toolchain-ga.cmake  toolchain-gnu.cmake  toolchain-gw.cmake  toolchain-mingw.cmake
libpiper/: CMakeLists.txt
libpiper/app/cli/: CMakeLists.txt  CommandLine.cpp  CommandLine.h  helpers.cpp  helpers.h  main.cpp
libpiper/src/: piper.cpp
